# halt_is_defeat

./: .gitignore  README.rst  setup.cfg
.github/workflows/: tests.yml
docs/: halt_is_defeat.docx
examples/: decimal.hid  factor.hid  hello.hid  max.hid  mergesort.hid  optional_max.hid  ouroboros.hid  sat.hid  sphinxfuck.hid
hidc/: __main__.py  ast.py  errors.py  grammar.py  lexer.py  parser.py  tokens.py  typecheck.py
hidc/ast/: __init__.py  abc.py  blocks.py  expressions.py  operators.py  program.py  statements.py  symbols.py
hidc/codegen/: __init__.py  __main__.py  asm.py  generator.py  stdlib.py  symbols.py  tracker.py
hidc/lexer/: __init__.py  __main__.py  readers.py  scanner.py  tokens.py
hidc/parser/: __init__.py  __main__.py  ast.py  grammar.py  rules.py
hidc/utils/: data_abc.py  lazylist.py  propertyclasses.py  scanner.py
tests/: test_codegen.py  test_lexer.py  test_parser.py  test_typecheck.py
