[metadata]
name = hidc
version = 0.1.0
author = Ben Burrill
author_email = bburrill98@gmail.com
description = A prophecy-optimized language for the Sphinx architecture
long_description = README.rst
license_file = LICENSE
classifiers =
    Topic :: Software Development :: Compilers
    License :: OSI Approved :: GNU General Public License v3 (GPLv3)

[options]
python_requires = >=3.10
packages = hidc

[tox:tox]
min_version = 4.0
env_list =
    py310
    py311

[testenv:{py,py311}]
deps =
    pytest
    coverage
commands =
    coverage run --source hidc -m pytest tests
    coverage report
    coverage html

[testenv]
deps = pytest
commands = pytest tests
